--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -80,13 +80,14 @@ body{
     /* padding-bottom:50px; */
     padding-left: 25px; 
     font-size: 25px;
+    margin-top: 25px;
 }
 
 .other-scores-1{
     display:flex;
     flex-direction: row;
     background-color: hsl(224, 30%, 27%);
-    padding: 20px;
+    padding: 15px;
     width: 250px;
     margin : 10px 25px;
     border-radius: 10px;
@@ -96,7 +97,7 @@ body{
     display:flex;
     flex-direction: row;
     background-color: hsl(224, 30%, 27%);
-    padding: 20px;
+    padding: 15px;
     width: 250px;
     margin : 10px 25px;
     border-radius: 10px;
@@ -105,7 +106,7 @@ body{
     display:flex;
     flex-direction: row;
     background-color: hsl(224, 30%, 27%);
-    padding: 20px;
+    padding: 15px;
     width: 250px;
     margin : 10px 25px;
     border-radius: 10px;
@@ -114,7 +115,7 @@ body{
     display:flex;
     flex-direction: row;
     background-color: hsl(224, 30%, 27%);
-    padding: 20px;
+    padding: 15px;
     width: 250px;
     margin : 10px 25px;
     border-radius: 10px;
@@ -124,7 +125,7 @@ body{
     background-color: hsl(224, 30%, 27%);
     padding: 15px 20px;
     width: 250px;
-    margin : 20px 25px;
+    margin : 30px 25px;
     border-radius: 25px;
     text-align: center;
     justify-content: center;
