--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -104,4 +104,37 @@ body{
     /* letter-spacing: 0.1rem; */
 }
 
+.thank-you{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.thank-you img{
+    margin : 0 auto 2rem;
+    display: block;
+}
+
+.thank-you .grade{
+    background-color: hsl(214, 18%, 25%);
+    color: hsl(25, 97%, 53%);
+    padding: 0.3rem 0.7rem 0.2rem;
+    border-radius: 30px;
+    margin-bottom: 1rem;
+}
+
+.thank-you h2{
+    margin: 0rem 0 0.5rem;
+    color: white;
+}
+
+.thank-you p{
+    color: hsl(217, 12%, 63%);
+}
+
+.hidden{
+    display: none;
+}
+
 
